Fixup ns when inserting index & check for errors.  SERVER-2186.